--- a/modulo3/introduçãohtml&css/style.css
+++ b/modulo3/introduçãohtml&css/style.css
@@ -1,6 +1,11 @@
 body{
     background: #ccc;
 }
+.maria{
+    border: 10px solid #5050;
+    border-radius: 50%;
+}
+
 #title .subtitle, .post_title {
     color: blue;
 }
@@ -14,4 +19,11 @@ body{
     background: #fff;
     padding: 10px;
     border: 3px solid #000; 
+    margin: 10px;
+    border-radius: 5px;
+}
+
+.post_content {
+    margin: 0; 
+    margin-bottom: 15px;
 }
