--- a/modulo3/introduçãohtml&css/style.css
+++ b/modulo3/introduçãohtml&css/style.css
@@ -1,9 +1,18 @@
 body{
     background: #ccc;
+    font-family: verdana;
 }
 .maria{
     border: 10px solid #5050;
     border-radius: 50%;
+}
+#title {
+    font-size: 40px; 
+    text-transform: uppercase;
+}
+a {
+    text-decoration: line-through; 
+    color: #505050;
 }
 
 #title .subtitle, .post_title {
@@ -26,4 +35,5 @@ body{
 .post_content {
     margin: 0; 
     margin-bottom: 15px;
+    text-transform: capitalize;
 }
