--- a/modulo3/introduçãohtml&css/style.css
+++ b/modulo3/introduçãohtml&css/style.css
@@ -37,3 +37,12 @@ a {
     margin-bottom: 15px;
     text-transform: capitalize;
 }
+
+.contacts_list {
+    list-style-type: none;
+    padding-left: 15px;
+}
+
+.contacts_list li a {
+    text-decoration: none;
+}
