--- a/modulo3/introduçãohtml&css/style.css
+++ b/modulo3/introduçãohtml&css/style.css
@@ -1,10 +1,13 @@
 body{
     background: #ccc;
     font-family: verdana;
+    width: 900px;
 }
 .maria{
     border: 10px solid #5050;
     border-radius: 50%;
+    width: 900px; 
+    margin: auto;
 }
 #title {
     font-size: 40px; 
