--- a/modulo3/3estrutura báscia do display flex/projeto/style.css
+++ b/modulo3/3estrutura báscia do display flex/projeto/style.css
@@ -14,6 +14,11 @@ ul li a {
     text-decoration: none;
 }
 
+div img{
+    display: block; 
+    width: 100%;
+}
+
 .flex-ccontainer{
     display: flex;
     max-width: 992px;
@@ -26,10 +31,14 @@ header{
    height: 100px;
    display: flex;
    align-items: center; 
+   color: #fff;
 }
 
 header .list-items {
     display: flex;
+    max-width: 260px;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .list-items li a {
@@ -56,4 +65,34 @@ header menu{
     text-align: center;
     border-radius: 30px;
     width: 220px;
+    display: block;
+    text-decoration: none; 
+    height: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#quem-somos{
+    flex-direction: row-reverse;
+    align-items: center; 
+    justify-content: space-between;
+}
+
+#quem-somos h2{
+    font-size: 32px; 
+    color: #122a57;
+    display: flex;
+}
+
+#quem-somos h2::befora{
+    content: " ";
+    height: 50px;
+    width: 5px;
+    margin-right: 5px;
+    background-color: #122a57;
+    position: relative;
+}
+
+#quem-somos{
+    margin-bottom: ;
 }
