--- a/modulo3/3estrutura báscia do display flex/projeto/style.css
+++ b/modulo3/3estrutura báscia do display flex/projeto/style.css
@@ -94,5 +94,14 @@ header menu{
 }
 
 #quem-somos{
-    margin-bottom: ;
+    margin-bottom: 420px;
+}
+
+.container-externo{
+    background-color: #122a57;
+}
+
+.container-externo{
+    background-color: #122a57;
+    width: 100%;
 }
